# api/handlers/v1/bus.go
@@ -82,3 +82,32 @@ func (h handlerV1) BusGetAll(c *gin.Context) {
 
 	h.HandleSuccessResponse(c, 200, "get all buses successfully", res)
 }
+
+//@Router /v1/bus/reserve/{id} [post]
+//@Summary Reserve bus
+//@Description API for reserve bus
+//@Tags bus
+//@Accept json
+//@Produce json
+//@Param id path string true "id"
+//@Success 200 {object} models.SuccessModel
+//@Failure 400 {object} models.ResponseError
+//@Failure 500 {object} models.ResponseError
+func (h handlerV1) BusReserve(c *gin.Context) {
+	desID := c.Param("id")
+	value, err := strconv.Atoi(desID)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	res, err := h.storage.BusRepo().ReserveBus(int64(value))
+	if err != nil {
+		h.HandleErrorResponse(c, http.StatusInternalServerError, "database error", err)
+		return
+	}
+
+	h.HandleSuccessResponse(c, 201, "bus reserved successfully", res)
+}
